#
# Copyright (C) 2012, Northwestern University.
# See COPYRIGHT notice in top-level directory.
#
# @configure_input@

EXTRA_DIST = ZGrd.CP.fcfg \
             ZGrd.CP.lyr.fcfg \
             ZGrd.CP.lyr.fcfg.groups \
             ZGrd.CP.lyr.fcfg.one \
             ZGrd.LZ.fcfg.nophys \
             ZGrd.desc \
             zgrd.in \
             zgrd.in.r6 \
             zgrd.in.r7 \
             zgrd.in.r8 \
             zgrd.in.r9 \
             zgrd.in.r10 \
             zgrd.in.r11
